<resources>
    <string name="app_name">SafeRide</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="pick_up_stations">Pickup Stations</string>
    <string name="radius_home">Radius</string>
    <string name="working_hours">Working Hours</string>
    <string name="information">Info</string>
    <string name="news">News</string>
    <string name="qr_code">QR Code</string>

    <string name="about_us">About Us</string>
    <string name="button">Button</string>
    <string name="qr_code_scanner">QR Code</string>
    <string name="radius">Radius</string>
    <string name="next_pick_up">Next Pick-up</string>
    <string name="car_photos">Car Photos</string>
    <string name="plus_Sign">+</string>
    <string name="front_view">Front View</string>
    <string name="right_view">Right View</string>
    <string name="back_text">Back View</string>
    <string name="left_view">Left View</string>
    <string name="next">Next</string>
    <string name="front_image">Front Image</string>
    <string name="right_image">Right Image</string>
    <string name="back_image">Back Image</string>
    <string name="left_image">Left Image</string>
    <string name="student_union_building">Student Union Building</string>
    <string name="head_hall">Head Hall</string>
    <string name="subbutton">SUBButton</string>
    <string name="headhallimagebutton">HeadHallImageButton</string>
    <string name="stu_button">STU Button</string>
    <string name="richard_currie_center">Richard Currie Center</string>
    <string name="curriebutton">CurrieButton</string>
    <string name="stu">STU</string>
    <string name="select_pick_up_station">Select Pick Up Station</string>
    <string name="driver_view">Driver View</string>
    <string name="manual_input">Manual Input</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="select_station">Select Station</string>
    <string name="upcoming_locations_will_be_shown_here">Upcoming locations will be shown here</string>
    <string name="iuc_building">IUC Building</string>
    <string name="sir_james_dunn_hall_stu">Sir James Dunn Hall (STU)</string>
    <string name="completed">Complete Trip</string>
    <string name="iucbutton">IUCButton</string>
    <string name="science_library_i_u_c">Science Library (I.U.C)</string>
    <string name="continue_next">Continue</string>
    <string name="map_view">Map View:</string>
    <string name="street_view">Street View:</string>
    <string-array name="spinner_items">
        <item>Select Station</item>
        <item>Student Union Building</item>
        <item>Science Library (I.U.C)</item>
        <item>Sir James Dunn Hall (STU)</item>
    </string-array>

</resources>