<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/home_activity_background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PickupStationsDriver">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:background="@color/saferideOrange"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/select_pick_up_station"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:fontFamily="sans-serif-black"
            android:text="@string/button"
            app:icon="?attr/homeAsUpIndicator"
            app:iconSize="30dp"
            app:iconTint="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <ImageButton
                android:id="@+id/imageButtonSUB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/subbutton"
                android:src="@drawable/pickup_3" />


            <TextView
                android:id="@+id/TextViewSUB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_below="@id/imageButtonSUB"
                android:text="@string/student_union_building"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <ImageButton
                android:id="@+id/IUCButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextViewSUB"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/iucbutton"
                android:src="@drawable/pickup_2"
                />


            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/IUCButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/science_library_i_u_c"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <ImageButton
                android:id="@+id/STUImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/textView12"
                android:layout_marginTop="30dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/stu_button"
                android:src="@drawable/pickup_1" />


            <TextView
                android:id="@+id/textViewSTU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/STUImageButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="Sir James Dunn Hall (STU)"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
