<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_activity_background_gradient"
    tools:context=".HomePageActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:background="@color/saferideOrange"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/manual_input"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:fontFamily="sans-serif-black"
            android:text="@string/button"
            app:icon="?attr/homeAsUpIndicator"
            app:iconSize="30dp"
            app:iconTint="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="60dp">


        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_address"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/AddressTextViewInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address"
            android:textColor="@color/white"
            android:textColorHint="@color/loginBG"
            android:backgroundTint="@color/white"
            android:inputType="textPostalAddress"/>

        <Button
            android:id="@+id/Submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_margin="20dp"
            android:backgroundTint="@color/saferide_orange"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>